# e5-el

./: README.md  default.conf  e5_direct.sh  e5_stage.sh  pyproject.toml
configs/: config.yaml
src/: argparser.py  eval.py  main.py  pooling.py  predict.py  retriever.py  train.py
src/cli/: run.py
src/data/: dataset.py  dictionary.py
src/training/: trainer.py
tests/: test_dataset.py  test_dictionary.py  test_trainer.py
