[project]
name = "e5-el"
version = "0.1.0"
description = "EL for E5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "faiss-cpu>=1.9.0.post1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
]
